Week 1/Week 1/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/Applications/BlueJ.app/Contents/PlugIns/jdk/Contents/Home/bin/javadoc
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.7
-classpath
/Applications/BlueJ.app/Contents/Resources/Java/bluejcore.jar:/Applications/BlueJ.app/Contents/Resources/Java/junit-4.8.2.jar:/Users/jimjohn_thornton/Desktop/ISD/Week 1/Week 1
-d
/Users/jimjohn_thornton/Desktop/ISD/Week 1/Week 1/doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
/Applications/BlueJ.app/Contents/Resources/Java/bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
/Users/jimjohn_thornton/Desktop/ISD/Week 1/Week 1/HelloPrinter.java
<---- end of javadoc command ---->
Loading source file /Users/jimjohn_thornton/Desktop/ISD/Week 1/Week 1/HelloPrinter.java...
/Users/jimjohn_thornton/Desktop/ISD/Week 1/Week 1/HelloPrinter.java:4: error: <identifier> expected
    Public static void main(String[] args)
          ^
1 error
